my special.my special.my special.my special.my special.my special.my special.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,13 +38,18 @@
     7, J ） 则为 18 点\n
   </string>
   <string name="game_rule">
-    \n游戏规则：\n
-    1. 规定次数内所拍之和为“21点”者，可获得A类大奖，送完即止.\n
-    2. 每个手机号码一天只能兑换一次奖品.\n
-    3. 奖品将以短彩信形式发送到你的手机上哦.\n
-    4. 每个手机每天只能进行10次有效游戏.\n
+    \n兑奖规则\n
+    \n1，设立一、二等奖，每局游戏最多可拍5张牌，所拍之和为“21点”者，可获一等奖，其他情况均可获得二等奖，数量有限，送完即止；
+    \n2，每个手机每天可以进行10局游戏；
+    \n3，每个手机号码每天只能兑换一次奖品；
+    \n4，奖品将以二维码短彩信发送到您所填写的手机号码上，请注意查收；
+    \n5，活动将在高交会期间持续开展6天（11/16/2011~11/21/2011),活动最终解释权归翼码信息科技所有；
+
 
   </string>
+
+
+
 
 
 </resources>
